fix links for pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       alt="Mein Profilfoto"
       class="profil"
     />
-    <a href="projekte.html" class="button">Zu meinen Projekten ansehen</a>
+    <a href="./projekte.html" class="button">Zu meinen Projekten ansehen</a>
   </div>
 </body>
 </html>
