--- a/projekte.html
+++ b/projekte.html
@@ -57,7 +57,9 @@
   <div class="projects-wrap">
     <div class="backbar">
       <p>Hier sammle ich kleine Übungen und Lernprojekte aus HTML, CSS und JavaScript.</p>
-      <a href="index.html" class="btn">Zur Startseite</a>
+      <a href="./index.html" class="btn">Zur Startseite</a>
+      <a href="/BBJKLJKLJKLK/projekte.html">Vezi proiectele</a>
+      <a href="/BBJKLJKLJKLK/index.html">Vezi pagina principală</a>
     </div>
 
     <div class="projects-grid">
